// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`корректно заменит несколько маркеров на jsx-элемент 1`] = `
<div>
  Здесь может быть какой-то текст из бункера и 
  <Link
    onClick={[Function]}
  >
    живая ссылка
  </Link>
   и ещё 
  <Link
    onClick={[Function]}
  >
    живая ссылка
  </Link>
  
</div>
`;

exports[`корректно заменит несколько разных маркеров на разные jsx-элементы 1`] = `
<div>
  Здесь может быть какой-то текст из бункера и 
  <Link
    onClick={[Function]}
  >
    живая ссылка
  </Link>
   и ещё 
  <Link
    onClick={[Function]}
  >
    другая ссылка
  </Link>
  
</div>
`;

exports[`корректно заменит подстроку-маркер на jsx-элемент 1`] = `
<div>
  Здесь может быть какой-то текст из бункера и 
  <Link
    onClick={[Function]}
  >
    живая ссылка
  </Link>
  
</div>
`;
